--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,7 @@
 {% include './generic/_reset.css' %}
 {% include './generic/_normalize.css' %}
 {% include './objects/_layout.css' %}
-{% include './objects/_dnd-areas.css' %}
+{% include './objects/_containers-dnd.css' %}
 {% include './elements/_typography.css' %}
 {% include './elements/_buttons.css' %}
 {% include './elements/_forms.css' %}
