--- a/src/css/templates/_blog.css
+++ b/src/css/templates/_blog.css
@@ -1,11 +1,5 @@
 /* Blog Container */
 
-.content-wrapper {
-    margin: 0px auto;
-    max-width: {{ get_theme_style_setting('spacing_group.spacing.max_width', 'px') }};
-    padding: 0px 25px;
-}
-
 .blog-index,
 .blog-post {
     padding: 60px 0px;
@@ -22,8 +16,8 @@
 .blog-post-header {
     background-position: center center;
     background-size: cover;
-    padding-bottom: {{ get_theme_style_setting('spacing_group.spacing.vertical_spacing', 'px') }};
-    padding-top: {{ get_theme_style_setting('spacing_group.spacing.vertical_spacing', 'px') }};
+    padding-bottom: 80px;
+    padding-top: 80px;
 }
 
 .blog-index-header {
@@ -42,7 +36,7 @@
 }
 
 .blog-post-header__back-button {
-    background-color: {{ get_theme_style_setting('buttons_group.buttons.button_bg_color.color') }};
+    background-color: #C168C2;
     font-size: 20px;
     padding: 15px 20px;
     text-align: right;
@@ -50,40 +44,40 @@
 }
 
 .blog-post-header__back-button svg {
-    fill: {{ get_theme_style_setting('buttons_group.buttons.button_text_color.color') }};
+    fill: #FFF;
     margin-right: 10px;
 }
 
 .blog-post-header__back-button a {
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    color: {{ get_theme_style_setting('buttons_group.buttons.button_text_color.color') }};
+    -ms-flex-align: center;
+    align-items: center;
+    color: #FFF;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
 }
 
 .blog-post-header__back-button:hover,
 .blog-post-header__back-button:focus,
 .blog-post-header__back-button:active {
-    background-color: {{ get_theme_style_setting('buttons_group.buttons.button_bg_hover_color.color') }};
+    background-color: #E77DE8;
 }
 
 .blog-post-header__back-button:hover a,
 .blog-post-header__back-button:focus a,
 .blog-post-header__back-button:active a {
-    color: {{ get_theme_style_setting('buttons_group.buttons.button_text_color.color') }};
+    color: #FFF;
     text-decoration: none;
 }
 
 /* Blog Navigation */
 
 .blog-navigation {
-    background-color: {{ get_theme_style_setting('header_group.header.header_bg_color.color') }};
+    background-color: #34B5E5;
     padding: 16px 0px;
 }
 
@@ -100,7 +94,7 @@
 }
 
 .blog-tag-filter__title {
-    color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
+    color: #FFF;
     font-weight: 600;
     margin-right: 48px;
     text-transform: uppercase;
@@ -116,7 +110,7 @@
          appearance: none;
     background-color: rgba(0, 0, 0, 0.3);
     border: none;
-    color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
+    color: #FFF;
     display: inline-block;
     padding: 0.75rem;
     max-width: 100%;
@@ -132,7 +126,7 @@
 }
 
 .blog-tag-filter__dropdown:after {
-    color: #FFFFFF;
+    color: #FFF;
     content: "\25BE";
     pointer-events: none;
     position: absolute;
@@ -175,7 +169,7 @@
 
 .blog-card {
     border: 1px solid #D0D0D0;
-    border-radius: {{ get_theme_style_setting('buttons_group.buttons.button_border_radius', 'px') }};
+    border-radius: 4px;
     margin-bottom: 30px;
     width: calc(50% - 30px);
 }
@@ -193,13 +187,13 @@
 .blog-card__title a,
 .blog-card__author-name,
 .blog-post__author-name {
-    color: {{ get_theme_style_setting('typography_group.typography.body_font.color') }};
+    color: #1E2B33;
 }
 
 .blog-card__title a:hover,
 .blog-card__author-name:hover,
 .blog-post__author-name:hover {
-    color: {{ get_theme_style_setting('typography_group.typography.body_font.color') }};
+    color: #1E2B33;
     text-decoration: none;
 }
 
@@ -252,7 +246,7 @@
 
 .blog-card__tags svg,
 .blog-post__tags svg {
-    fill: {{ get_theme_style_setting('blog_group.blog.blog_tag_bg_color.color') }};
+    fill: #34B5E5;
     height: 15px;
     margin-right: 10px;
     -ms-transform: rotate(90deg);
@@ -263,9 +257,9 @@
 
 .blog-card__tag-link,
 .blog-post__tag-link {
-    background-color: {{ get_theme_style_setting('blog_group.blog.blog_tag_bg_color.color') }};
+    background-color: #34B5E5;
     border-radius: 4px;
-    color: {{ get_theme_style_setting('blog_group.blog.blog_tag_text_color.color') }};
+    color: #FFF;
     padding: 5px;
     text-decoration: none;
 }
@@ -274,7 +268,7 @@
 .blog-card__tag-link:focus,
 .blog-post__tag-link:hover,
 .blog-post__tag-link:focus {
-    color: {{ get_theme_style_setting('blog_group.blog.blog_tag_text_color.color') }};
+    color: #FFF;
     text-decoration: none;
 }
 
@@ -320,7 +314,7 @@
 
 .blog-pagination__link {
     border-radius: 4px;
-    color: {{ get_theme_style_setting('links_group.links.link_color.color') }};
+    color: #C168C2;
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
@@ -333,18 +327,18 @@
 
 .blog-pagination__link--active {
     background-color: #34B5E5;
-    color: #FFFFFF;
+    color: #FFF;
 }
 
 .blog-pagination__link:hover,
 .blog-pagination__link:focus {
-    color: {{ get_theme_style_setting('links_group.links.link_hover_color.color') }};
+    color: #E77DE8;
     text-decoration: none;
 }
 
 .blog-pagination__link--active:hover,
 .blog-pagination__link--active:focus {
-    color: #FFFFFF;
+    color: #FFF;
 }
 
 .blog-pagination__prev-link,
@@ -375,13 +369,13 @@
 
 .blog-pagination__prev-link svg,
 .blog-pagination__next-link svg {
-    fill: {{ get_theme_style_setting('links_group.links.link_color.color') }};
+    fill: #C168C2;
     margin: 0 5px;
 }
 
 .blog-pagination__link:hover svg,
 .blog-pagination__link:focus svg {
-    fill: {{ get_theme_style_setting('links_group.links.link_hover_color.color') }};
+    fill: #E77DE8;
 }
 
 .blog-pagination__prev-link--disabled svg,
@@ -464,7 +458,7 @@
 .blog-post__comments-listing .comment-from a,
 .blog-post__comments-listing .comment-from h4,
 .blog-post__comments-listing .comment-date {
-    color: {{ get_theme_style_setting('typography_group.typography.body_font.color') }};
+    color: #1E2B33;
     font-size: 1rem;
     text-transform: none;
 }
@@ -487,13 +481,13 @@
 }
 
 .blog-post__comments-listing .comment-reply-to {
-    color: {{ get_theme_style_setting('links_group.links.link_color.color') }};
+    color: #C168C2;
     cursor: pointer;
     padding-left: 30px
     text-decoration: none;
 }
 
 .blog-post__comments-listing .comment-reply-to:hover {
-    color: {{ get_theme_style_setting('links_group.links.link_hover_color.color') }};
+    color: #E77DE8;
     text-decoration: underline;
 }
