--- a/src/templates/home-page.html
+++ b/src/templates/home-page.html
@@ -39,8 +39,8 @@
           {% end_dnd_module %}
         {% end_dnd_row %}
         {% dnd_row %}
-          {% dnd_module path="../modules/Button",
-            flexbox_positioning="MIDDLE_CENTER",
+          {% dnd_module path="../modules/button",
+            horizontal_alignment="CENTER",
             button_link="#",
             button_text="Free Trial"
           %}
@@ -205,7 +205,7 @@
           {% end_dnd_row %}
           {% dnd_row %}
             {% dnd_module
-              path="../modules/Button",
+              path="../modules/button",
               flexbox_positioning='MIDDLE_LEFT',
               button_link="#",
               button_text="Learn More"
@@ -463,7 +463,7 @@
           {% end_dnd_module %}
         {% end_dnd_row %}
         {% dnd_row %}
-          {% dnd_module path="../modules/Button",
+          {% dnd_module path="../modules/button",
             flexbox_positioning="MIDDLE_CENTER",
             button_link="#",
             button_text="Free Trial"
