--- a/src/templates/pricing.html
+++ b/src/templates/pricing.html
@@ -97,7 +97,7 @@
           {% end_dnd_row %}
           {% dnd_row %}
             {% dnd_module
-              path="../modules/Button",
+              path="../modules/button",
               flexbox_positioning="MIDDLE_LEFT",
               link="#",
               button_text="Free Trial"
