--- a/src/css/elements/_typography.css
+++ b/src/css/elements/_typography.css
@@ -96,13 +96,13 @@ h6 {
 ul,
 ol {
   list-style-position: inside;
-  margin: 1.5rem 0;
+  margin: 1.4rem 0;
   padding-left: 0;
 }
 
 ul li,
 ol li {
-  line-height: 2;
+  margin-bottom: 0.7rem;
 }
 
 ul ul,
@@ -122,7 +122,7 @@ code {
 /* Blockquotes */
 
 blockquote {
-  border-left: 4px solid #1E2B33;
+  border-left: 4px solid #34B5E5;
   font-size: 1.4rem;
   margin: 0 0 1.4rem;
   padding-left: 1.4rem;
