--- a/src/templates/layouts/base.html
+++ b/src/templates/layouts/base.html
@@ -5,8 +5,8 @@
     <title>{{ page_meta.html_title }}</title>
     {% if site_settings.favicon_src %}<link rel="shortcut icon" href="{{ site_settings.favicon_src }}" />{% endif %}
     <meta name="description" content="{{ page_meta.meta_description }}">
-    {{ require_css(get_public_template_url("../../css/main.css")) }}
-    {{ require_css(get_asset_url("../../css/theme_overrides.css")) }}
+    {{ require_css(get_asset_url("../../css/main.css")) }}
+    {{ require_css(get_asset_url("../../css/theme-overrides.css")) }}
     {{ require_js(get_asset_url("../../js/main.js")) }}
     {{ standard_header_includes }}
   </head>
